--- a/index.html
+++ b/index.html
@@ -6,6 +6,32 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>ANGELIQUE HILL</h1>
+        <nav>
+          <a href="index.html">Home</a>
+          <a href="about.html">About</a>
+          <a href="contact.html">Contact</a>
+          <a href="projects.html">Projects</a>
+        </nav>
+      </header> 
+      <section>
+          <div>
+              <img src="https://picsum.photos/id/103/500/350.jpg" alt="Shoes">
+          </div>
+          <h2>Angelique Hill</h2>
+          <button>My Projects</button>
+          <p>I've made becoming a developer my main focus as of now. Nothing in life that is worth it comes easy. As long as you put your best foot forward and keep the main goal in sight, it can surely happen.</p>
+      </section>
+      <section>
+          <img src="https://picsum.photos/id/237/300/300.jpg">
+          <img src="https://picsum.photos/id/100/300/300.jpg">
+          <img src="https://picsum.photos/id/1015/300/300.jpg">
+          <img src="https://picsum.photos/id/1031/300/300.jpg">
+          <img src="https://picsum.photos/id/106/300/300.jpg">
+          <img src="https://picsum.photos/id/1066/300/300.jpg">
+          <img src="https://picsum.photos/id/119/300/300.jpg">
+          <img src="https://picsum.photos/id/123/300/300.jpg">
+      </section>
 </body>
 </html>
