--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </header> 
       <section>
           <div>
-              <img src="https://picsum.photos/id/103/500/350.jpg" alt="Shoes">
+              <img src="https://picsum.photos/id/103/500/350.jpg">
           </div>
           <h2>Angelique Hill</h2>
           <button>My Projects</button>
