added styling to file style/index.css

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style/index.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,23 +16,51 @@
           <a href="projects.html">Projects</a>
         </nav>
       </header> 
-      <section>
-          <div>
-              <img src="https://picsum.photos/id/103/500/350.jpg">
-          </div>
+      <section class="top-section">
+        <img src="https://picsum.photos/id/103/500/350.jpg">
+        <div>
           <h2>Angelique Hill</h2>
           <button>My Projects</button>
-          <p>I've made becoming a developer my main focus as of now. Nothing in life that is worth it comes easy. As long as you put your best foot forward and keep the main goal in sight, it can surely happen.</p>
+          <p>Here are some words about me and my journey in coding so far. These words are authentic and inspiring. These words tell my story.</p>
+        </div>
       </section>
-      <section>
-          <img src="https://picsum.photos/id/237/300/300.jpg">
-          <img src="https://picsum.photos/id/100/300/300.jpg">
-          <img src="https://picsum.photos/id/1015/300/300.jpg">
-          <img src="https://picsum.photos/id/1031/300/300.jpg">
-          <img src="https://picsum.photos/id/106/300/300.jpg">
-          <img src="https://picsum.photos/id/1066/300/300.jpg">
-          <img src="https://picsum.photos/id/119/300/300.jpg">
-          <img src="https://picsum.photos/id/123/300/300.jpg">
+      <section class="container">
+        <div class="img-with-text">
+          <img src="https://picsum.photos/id/237/250/300.jpg" alt="title-of-a"/>
+          <p>title of a</p>
+        </div>
+        <div class="img-with-text">
+          <img src="https://picsum.photos/id/100/250/300.jpg" alt="project"/>
+          <p>project</p>
+        </div>
+        <div class="img-with-text">
+          <img src="https://picsum.photos/id/1015/250/300.jpg" alt="might-go"/>
+          <p>might go</p>
+        </div>
+        <div class="img-with-text">
+          <img src="https://picsum.photos/id/1031/250/300.jpg" alt="right-here"/>
+          <p>right here</p>
+        </div>
+        <div class="img-with-text">
+          <img src="https://picsum.photos/id/106/250/300.jpg" alt="cool-thing"/>
+          <p>cool thing</p>
+        </div>
+        <div class="img-with-text">
+          <img src="https://picsum.photos/id/1066/250/300.jpg" alt="fun-thing"/>
+          <p>fun thing</p>
+        </div>
+        <div class="img-with-text">
+          <img src="https://picsum.photos/id/119/250/300.jpg" alt="spicy-thing"/>
+          <p>spicy thing</p>
+        </div>
+        <div class="img-with-text">
+          <img src="https://picsum.photos/id/123/250/300.jpg" alt="special-thing"/>
+          <p>special thing</p>
+        </div>
       </section>
+      <footer class="info">
+          <h3>Like what you see?</h3>
+          <button>Contact Me</button>
+      </footer>
 </body>
 </html>
